<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.openapis</groupId>
    <artifactId>hy.common.net</artifactId>
    <version>3.0.4</version>
    <packaging>jar</packaging>

    <name>cn.openapis.hy.common.net</name>
    <!-- https://gitee.com/HY-ZhengWei/hy.common.net -->
    <url>https://github.com/HY-ZhengWei/hy.common.net</url>
    <description>cn.openapis.hy.common.net</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>maven-public</id>
            <name>oss sonatype snapshots</name>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>

        <repository>
            <id>maven-public</id>
            <name>oss sonatype releases</name>
            <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
        </repository>
    </distributionManagement>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>actable</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Zheng Wei</name>
            <email>HY.ZhengWei@qq.com</email>
            <url>https://github.com/HY-ZhengWei</url>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.base</artifactId>
            <version>1.0.174</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.file</artifactId>
            <version>1.2.9</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.tpool</artifactId>
            <version>1.3.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.xjava</artifactId>
            <version>4.4.4</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.49.Final</version>
        </dependency>
        
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>3.21.1</version>
        </dependency>
    
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.4.7</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <scm>
        <tag>master</tag>
        <url>git@github.com:HY-ZhengWei/hy.common.net.git</url>
        <connection>git@github.com:HY-ZhengWei/hy.common.net.git</connection>
        <developerConnection>git@github.com:HY-ZhengWei/hy.common.net.git</developerConnection>
    </scm>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/LICENSE</include>
                    <include>**/*.xml</include>
                    <include>**/*.html</include>
                    <include>**/*.txt</include>
                    <include>**/*.ini</include>
                    <include>**/*.json</include>
                    <include>**/*.properties</include>
                    <include>**/*.md</include>
                    <include>**/*.MF</include>
                    <include>**/*.js</include>
                    <include>**/*.css</include>
                    <include>**/*.map</include>
                    <include>**/*.png</include>
                    <include>**/*.gif</include>
                    <include>**/*.eot</include>
                    <include>**/*.svg</include>
                    <include>**/*.ttf</include>
                    <include>**/*.woff</include>
                    <include>**/*.woff2</include>
                </includes>
            </resource>

            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
    
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>